--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -10,5 +10,5 @@ jobs:
     steps: 
       - name: check out reposiory
         uses: actions/checkout@v4
-      - run: echo "${cat hello_world.txt}"
+      - run: echo "$(cat hello_world.txt)"
     
